fit: basic function in prediction completed.

--- a/myapp/diabetes/static/diabetes/style.css
+++ b/myapp/diabetes/static/diabetes/style.css
@@ -51,3 +51,13 @@ form {
     font-size: medium;
     color: orange;
 }
+
+.positive {
+    font-size: 20px;
+    color: red;
+}
+
+.negative {
+    font-size: 20px;
+    color: lightgreen;
+}
