--- a/myapp/diabetes/static/diabetes/style.css
+++ b/myapp/diabetes/static/diabetes/style.css
@@ -31,9 +31,18 @@ body {
     margin:10px;
 }
 
-.button {
-    font-size: 20px;
-}
+button {
+    background-color: BurlyWood;
+    width: 100px; 
+    height: 40px; 
+    font-family: sans-serif;
+    margin-top: 20px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    border: none;
+    font-weight: bold;
+    color:lightyellow;
+    font-size: large;
+  }
 
 .content {
     font-size: 30px;
@@ -60,4 +69,116 @@ form {
 .negative {
     font-size: 20px;
     color: lightgreen;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 5rem; 
+    background-color: #008080;
+
+
+
+    display: flex;
+    align-items: center; /* align items vertically */
+    justify-content: center; /* align items horizontally */
+    flex-direction: column;
+    background-color: #008080;
+    text-align: center;
+}
+
+.container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+    padding-bottom: 2.5rem;    /* Footer height */
+}
+
+header {
+    height: 5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #008080;
+    color: #fff;
+    padding: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    margin-bottom: 2.5rem;
+}
+
+.logo {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.menu {
+    display: flex;
+    align-items: center;
+    font-size: large;
+}
+
+.dropdown {
+    position: relative;
+    right: 100px;
+    bottom: 0px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: -45%;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    font-family: sans-serif;
+    font-size: large;
+    font-weight: bold;
+    color: #333;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content a {
+    color: #333;
+    padding: 10px;
+    text-decoration: none;
+    display: block;
+}
+
+#menutext {
+    font-size: xx-large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:#fff;
+}
+
+#welcome {
+    position: absolute; /* Set position property to absolute */
+    top: 0; /* Set top position to 0 */
+    left: 0; /* Set left position to 0 */
+    width: 100%; /* Set width to 100% */
+    height: 100%; /* Set height to 100% */
+    object-fit: cover;
+}
+
+#reset {
+    left:50px;
+    position: relative;
+    top: -60px;
+    background-color:brown;
+}
+
+#res {
+    text-decoration: none;
+}
+#res:visited {
+    font-weight: bold;
+    color:lightyellow;
+    font-size: large;
+    text-decoration: none;
 }
