--- a/myapp/diabetes/templates/diabetes/base.html
+++ b/myapp/diabetes/templates/diabetes/base.html
@@ -8,22 +8,38 @@
 	</head>
 
 	<body>
-		<div class="header" id="id_header_div">
-			<h2 class="sitename">Early-Stage Diabetes Prediction System</h2>
+		<div class="container">
+			<div id="content-wrap">
+				<header>
+					<div class="logo">Early-Stage Diabetes Diagnosis</div>
+					<nav class="menu">
+					  <div class="dropdown">
+						<p id="menutext">Menu</p>
+						<div class="dropdown-content">
+						  <a href="{% url 'about' %}">About</a>
+						  <a href="{% url 'new_record' %}">New Record</a>
+						  <a href="{% url 'predict' %}">Prediction</a>
+						  <a href="{% url 'statistics' %}">statistics</a>
+						</div>
+					  </div>
+					</nav>
+				  </header>
+		
+				<h1 class="pagename" id="id_page_name"> {% block pagename %} Base {% endblock %}</h1>
+		
+				<div class="content">
+					{% block content %}
+					{% endblock %}
+					
+				</div>
+			</div>
+			
+			<div class="footer">
+				<div>&copy; 2023 Healthcare Web Application. All rights reserved. | 
+					<a href="#">Privacy Policy</a> | 
+					<a href="#">Terms of Service</a>
+				</div>				
+			</div>
 		</div>
-		<div class="links">
-			<a href="{% url 'about' %}" id="id_about"><button class="button">About</button></a>
-			<a href="{% url 'new_record' %}" id="id_new_record"><button class="button">New Record</button></a>
-			<a href="{% url 'predict' %}" id="id_predict"><button class="button">Prediction</button></a>
-			<a href="{% url 'statistics' %}" id="id_statistics"><button class="button">Statistics</button></a>
-		</div>
-
-        <h1 class="pagename" id="id_page_name"> {% block pagename %} Base {% endblock %}</h1>
-
-        <div class="content">
-		    {% block content %}
-		    {% endblock %}
-		</div>
-        
 	</body>
 </html>
