--- a/myapp/diabetes/templates/diabetes/newrecord.html
+++ b/myapp/diabetes/templates/diabetes/newrecord.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<form method="post" action="{% url 'new_record' %}">
+<form method="post" action="{% url 'new_record' %}" style="font-size: large;">
     <table>
         {% for field in form.visible_fields %}
             <tr>
