--- a/myapp/diabetes/static/diabetes/style.css
+++ b/myapp/diabetes/static/diabetes/style.css
@@ -75,11 +75,8 @@ form {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 5rem; 
+    height: 3rem; 
     background-color: #008080;
-
-
-
     display: flex;
     align-items: center; /* align items vertically */
     justify-content: center; /* align items horizontally */
@@ -181,4 +178,25 @@ header {
     color:lightyellow;
     font-size: large;
     text-decoration: none;
+}
+
+.stat {
+    height: 500px;
+    width: auto;
+}
+
+.scrollable {
+  overflow-x: auto; /* Enable horizontal scrolling */
+  white-space: nowrap; /* Prevent content from wrapping */
+  margin-bottom: 100px;
+}
+
+.imgset {
+    margin-bottom: 20px;
+}
+
+#about_info {
+    text-align: left;
+    font-size: large;
+    width: 1000px;
 }
