--- a/myapp/diabetes/templates/diabetes/predict.html
+++ b/myapp/diabetes/templates/diabetes/predict.html
@@ -25,7 +25,7 @@
 {% if message == "no potential diabetes" %} 
 <p class="negative">{{message}}</p>
 {% elif message == "potential diabetes"%}
-<p class="positive">{{message}}</p>
+<p class="positive">{{message}}, see <a href="{% url 'suggestions' %}">suggestions</a></p>
 {% endif %}
 
 {% endblock %}
