--- a/myapp/diabetes/templates/diabetes/statistics.html
+++ b/myapp/diabetes/templates/diabetes/statistics.html
@@ -7,23 +7,23 @@
 {% block content %}
 <div class="scrollable">
     <div class="tables-wrapper" style="display: flex; justify-content: center; margin: 30px;">
-        <div class="table-container" style="position: relative; left:500px;">
-            <table style="table-layout: fixed; width: 50%;">
+        <div class="table-container" style="position: relative; left: -4rem;">
+            <table style="table-layout: fixed; width: 60%;">
               <tr>
-                <th>Patient Number</th>
+                <th># of Patients</th>
                 <td class="statd">520</td>
               </tr>
               <tr>
-                <th>Positive Number</th>
+                <th># of Positive cases</th>
                 <td class="statd">320</td>
               </tr>
               <tr>
-                <th>Feature</th>
+                <th># of Features</th>
                 <td class="statd">16</td>
               </tr>
             </table>
           </div>
-        <div class="table-container" style="position: relative; left:100px;">
+        <div class="table-container" style="position: relative; left: -8rem;">
           <table>
             <tr>
               <th></th>
